# veranda

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml  simulator.pro
pkg_Box2D/: CMakeLists.txt  package.xml
pkg_Box2D/include/Box2D/: Note.txt
pkg_CatchTesting/: CMakeLists.txt  package.xml
pkg_CatchTesting/include/Catch/: ament_cmake_add_catch_test.cmake
pkg_Circle/: CMakeLists.txt  circle.pro  package.xml
pkg_Circle/include/: circle.h
pkg_DefaultRobotLoader/: CMakeLists.txt  Makefile.default_robot_loader  Makefile.default_robot_loader.Debug  Makefile.default_robot_loader.Release  default_robot_loader.pro  package.xml
pkg_DefaultRobotLoader/include/: default_robot_loader.h  default_robot_loader_plugin.h
pkg_DefaultRobotLoader/src/: default_robot_loader.cpp  default_robot_loader_plugin.cpp
pkg_FixedWheel/: CMakeLists.txt  fixed_wheel.pro  package.xml
pkg_FixedWheel/include/: fixed_wheel.h  fixed_wheel_plugin.h
pkg_FixedWheel/src/: fixed_wheel.cpp  fixed_wheel_plugin.cpp
pkg_FloatingDrivetrain/: CMakeLists.txt  floating_drivetrain.pro  package.xml
pkg_FloatingDrivetrain/include/: floater_drivetrain_plugin.cpp.autosave  floating_drivetrain.h  floating_drivetrain_plugin.cpp.autosave  floating_drivetrain_plugin.h
pkg_FloatingDrivetrain/src/: floating_drivetrain.cpp  floating_drivetrain_plugin.cpp
pkg_ImageLoader/: CMakeLists.txt  Makefile.image_loader  Makefile.image_loader.Debug  Makefile.image_loader.Release  image_loader.pro  package.xml
pkg_ImageLoader/include/: image_loader.h  image_loader_plugin.h  imageparser.h  optiondialog.h  polygonscomponent.h
pkg_ImageLoader/src/: image_loader.cpp  image_loader_plugin.cpp  imageparser.cpp  polygonscomponent.cpp
pkg_JsonFilePlugin/: CMakeLists.txt  Makefile.json_file_plugin  Makefile.json_file_plugin.Debug  Makefile.json_file_plugin.Release  json_file_plugin.pro  package.xml
pkg_JsonFilePlugin/include/: json_common.h  json_object.h  json_object_plugin.h  json_world.h  json_world_plugin.h
pkg_JsonFilePlugin/src/: json_object.cpp  json_object_plugin.cpp  json_world.cpp  json_world_plugin.cpp
pkg_LidarSensor/: CMakeLists.txt  package.xml
pkg_LidarSensor/include/: lidar_sensor.h  lidar_sensor_plugin.h
pkg_LidarSensor/src/: lidar_sensor.cpp
pkg_Sensors/: CMakeLists.txt  Makefile.lidar_sensor  Makefile.lidar_sensor.Debug  Makefile.lidar_sensor.Release  Makefile.touch_sensor_ring  Makefile.touch_sensor_ring.Debug  Makefile.touch_sensor_ring.Release  lidar_sensor.pro  package.xml  touch_sensor_ring.pro
pkg_Sensors/include/: defines.h  gps_sensor.h  gps_sensor_plugin.h  lidar_sensor.h  lidar_sensor_plugin.h  touch_sensor.h  touch_sensor_plugin.h
pkg_Sensors/src/: gps_sensor.cpp  lidar_sensor.cpp  lidar_sensor_plugin.cpp  touch_sensor.cpp  touch_sensor_plugin.cpp
pkg_Shapes/: CMakeLists.txt  Makefile.circle  Makefile.circle.Debug  Makefile.circle.Release  Makefile.polygon  Makefile.polygon.Debug  Makefile.polygon.Release  Makefile.rectangle  Makefile.rectangle.Debug  Makefile.rectangle.Release  circle.pro  package.xml  polygon.pro  rectangle.pro
pkg_Shapes/include/: circle.h  circle_plugin.h  defines.h  polygon.h  polygon_plugin.h  rectangle.h  rectangle_plugin.h  triangulator.h
pkg_Shapes/src/: circle.cpp  circle_plugin.cpp  polygon.cpp  polygon_plugin.cpp  rectangle.cpp  rectangle_plugin.cpp  triangulator.cpp
pkg_SimpleShape/: CMakeLists.txt  package.xml  simple_shape.pro
pkg_SimpleShape/include/: circle_plugin.h  simple_shape.h  simple_shape_plugin.h
pkg_SimpleShape/src/: circle.cpp  circle_plugin.cpp  simple_shape.cpp
pkg_Simulator/: CMakeLists.txt  Makefile.simulator  Makefile.simulator.Debug  Makefile.simulator.Release  package.xml  simulator.pro
pkg_Simulator/include/: basic_maploader.h  basic_physics.h  basic_robotloader.h  basic_ui.h  basic_viewer.h  map.h  robot.h  simulator_core.h  world_object.h  world_object.h.autosave
pkg_Simulator/include/interfaces/: map_loader_if.h  new_world_object_if.h  new_world_object_if.h.autosave  old_world_object_if.h  robot_interfaces.h  robot_loader_if.h  screen_model_if.h  sensor_if.h  simulator_physics_if.h  simulator_ui_if.h  simulator_visual_if.h  world_object_if.h  world_object_wrappers.h
pkg_Simulator/include/sdsmt_simulator/: cloneshape.h  drivetrain_if.h  drivetrain_plugin.h  model.h  properties_if.h  property.h  robotcomponent_if.h  sensor_if.h  sensor_plugin.h  world_object.h  world_object_component_if.h  (+5 more)
pkg_Simulator/sdsmt_simulator/: SimTimer.py
pkg_Simulator/src/: basic_maploader.cpp  basic_physics.cpp  basic_robotloader.cpp  basic_ui.cpp  basic_viewer.cpp  main.cpp  map.cpp  robot.cpp  simulator_core.cpp  world_object.cpp  world_object.cpp.autosave
pkg_Simulator/ui/: joystickprototype.ui  mainwindow.ui  resources.qrc  settingspopup.ui
pkg_SimulatorAPI/: CMakeLists.txt  Makefile.simulatorAPI  Makefile.simulatorAPI.Debug  Makefile.simulatorAPI.Release  package.xml  simulatorAPI.pro
pkg_SimulatorAPI/src/: world_object.cpp  world_object_component.cpp
pkg_SimulatorAPI/tests/: exampleheader.h  exampletest.cpp  test_model.cpp  test_property.cpp
pkg_TouchSensor/: CMakeLists.txt  package.xml  touch_sensor.pro
pkg_TouchSensor/include/: touch_sensor.h  touch_sensor_plugin.h
pkg_TouchSensor/src/: touch_sensor.cpp  touch_sensor_plugin.cpp
pkg_TouchSensorRing/: CMakeLists.txt  package.xml
pkg_TouchSensorRing/include/: touch_sensor.h  touch_sensor_plugin.h
pkg_TouchSensorRing/src/: touch_sensor.cpp  touch_sensor_plugin.cpp
pkg_Wheels/: CMakeLists.txt  Makefile.ackermann_steer  Makefile.ackermann_steer.Debug  Makefile.ackermann_steer.Release  Makefile.fixed_wheel  Makefile.fixed_wheel.Debug  Makefile.fixed_wheel.Release  ackermann_steer.pro  fixed_wheel.pro  package.xml
pkg_Wheels/include/: ackermann_steer.h  ackermann_steer_plugin.h  basic_wheel.h  defines.h  fixed_wheel.h  fixed_wheel_plugin.h
pkg_Wheels/src/: ackermann_steer.cpp  ackermann_steer_plugin.cpp  fixed_wheel.cpp  fixed_wheel_plugin.cpp
veranda/pkg_JsonFilePlugin/: json_file_plugin.pro  package.xml
veranda/pkg_Shapes/: package.xml
(+299 files in other folders)
