<?xml version="1.0"?>
<package format="2">
  <name>sdsmt_simulator_default_robot_loader_plugin</name>
  <version>0.0.1</version>
  <description>Default Robot Loader Plugin</description>

  <maintainer email="andrew.stelter@mines.sdsmt.edu">Andrew Stelter</maintainer>

  <license>TODO</license>

  <depend>sdsmt_simulator</depend>
  <depend>sdsmt_simulator_box2d</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
