<?xml version="1.0"?>
<package format="2">
  <name>sdsmt_simulator_fixed_wheel_plugin</name>
  <version>0.0.1</version>
  <description>Fixed Wheel Plugin</description>

  <maintainer email="andrew.stelter@mines.sdsmt.edu">Andrew Stelter</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sdsmt_simulator</depend>
  <depend>sdsmt_simulator_box2d</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
