<?xml version="1.0"?>
<package format="2">
  <name>sdsmt_simulator_json_file_plugin</name>
  <version>0.0.1</version>
  <description>Json File Plugin</description>

  <maintainer email="samuel.williams@mines.sdsmt.edu">Samuel Williams</maintainer>

  <license>TODO</license>

  <depend>sdsmt_simulator_api</depend>
  <depend>sdsmt_simulator_box2d</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
