<?xml version="1.0"?>
<package format="2">
  <name>sdsmt_simulator_lidar_sensor_plugin</name>
  <version>0.0.1</version>
  <description>Ring of Lidar Sensor Plugin</description>

  <maintainer email="andrew.stelter@mines.sdsmt.edu">Andrew Stelter</maintainer>

  <license>TODO</license>

  <depend>sdsmt_simulator_api</depend>
  <depend>sdsmt_simulator_box2d</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
