<?xml version="1.0"?>
<package format="2">
  <name>sdsmt_simulator</name>
  <version>0.0.1</version>
  <description>2D simulation environment for robots running in ROS</description>

  <maintainer email="andrew.stelter@mines.sdsmt.edu">Andrew Stelter</maintainer>
  <maintainer email="kendra.deziel@mines.sdsmt.edu">Kendra Deziel</maintainer>
  <maintainer email="ryley.sutton@mines.sdsmt.edu">Ryley Sutton</maintainer>
  <maintainer email="samuel.williams@mines.sdsmt.edu">Samuel Williams</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>sdsmt_simulator_box2d</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>

  </export>
</package>
