<?xml version="1.0"?>
<package format="2">
  <name>sdsmt_simulator</name>
  <version>0.0.1</version>
  <description>2D simulation environment for robots running in ROS</description>

  <maintainer email="andrew.d.stelter@gmail.com">Andrew Stelter</maintainer>
  <maintainer email="kendra.deziel@gmail.com">Kendra Deziel</maintainer>
  <maintainer email="suttonryley@gmail.com">Ryley Sutton</maintainer>
  <maintainer email="samuelcwill@gmail.com">Samuel Williams</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>sdsmt_simulator_box2d</depend>
  <depend>sdsmt_simulator_api</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
